--- a/.kite9/config.yml
+++ b/.kite9/config.yml
@@ -3,4 +3,4 @@ kite9:
   sources:
   - path: / 
     default: https://kite9.com/public/examples/basic.adl?format=adl
-    pattern: *.adl
+    pattern: "*.adl"
