--- a/.kite9/config.yml
+++ b/.kite9/config.yml
@@ -1,5 +1,5 @@
 uploads: .kite9/uploads
 sources:
 - path: / 
-  default: https://kite9.com/public/examples/basic.adl?format=adl
-  pattern: "*.adl"
+  template: https://kite9.com/public/examples/basic.adl?format=adl
+  pattern: "**/*.adl"
