--- a/.kite9/config.yml
+++ b/.kite9/config.yml
@@ -2,5 +2,5 @@ uploads: .kite9/uploads
 sources:
 - path: / 
   template: https://kite9.com/public/examples/basic.adl?format=adl
-  show-directories: true
+  showDirectories: true
   pattern: "**/*.adl"
