--- a/.kite9/config.yml
+++ b/.kite9/config.yml
@@ -1,6 +1,6 @@
 uploads: .kite9/uploads
 sources:
 - path: / 
-  template: https://kite9.com/public/examples/basic.adl?format=adl
   showDirectories: true
-  pattern: "**/*.adl"
+  pattern: "**/*.(adl|svg)"
+templates: https://kite9.com/public/examples/basic.adl?format=adl
