--- a/.kite9/config.yml
+++ b/.kite9/config.yml
@@ -2,5 +2,8 @@ uploads: .kite9/uploads
 sources:
 - path: / 
   showDirectories: true
-  pattern: "**/*.(adl|svg)"
+  pattern: "**/*.adl"
+- path: / 
+  showDirectories: true
+  pattern: "**/*.svg"
 templates: https://kite9.com/public/examples/basic.adl?format=adl
