--- a/.kite9/config.yml
+++ b/.kite9/config.yml
@@ -6,4 +6,6 @@ sources:
 - path: / 
   showDirectories: true
   pattern: "**/*.svg"
-templates: https://kite9.com/public/examples/basic.adl?format=adl
+templatePath: /public/examples
+templates: 
+  - /public/examples/basic.adl
